# dataclasses-io

./: .gitignore  LICENSE.md  README.md  setup.cfg  setup.py
dataclasses_io/: api.py  core.py  utils.py
src/dataclasses_io/: __init__.py  api.py  core.py  utils.py
test/: test_api.py
