[metadata]
name = dataclasses-io
version = 0.0.1
author = kaparoo
author_email = kaparoo2001@gmail.com
description = Supports save/load APIs for dataclass
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaparoo/dataclasses-io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src