[metadata]
name = dataclasses-io
version = 0.0.5
author = kaparoo
author_email = kaparoo2001@gmail.com
description = Supports save/load APIs for dataclasses
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dataclasses, json, yaml
license = MIT
url = https://github.com/kaparoo/dataclasses-io
download_url=https://github.com/kaparoo/dataclasses-io/dist/dataclases-io-0.0.5.tar.gz
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    PyYAML

[options.packages.find]
where = src